# ancseq

./: .gitignore  README.md  README_ko.md  ancseq.yml  pyproject.toml  setup.py
ancseq/: ancseq.py  params.py  utils.py
images/: ancseq_workflow.pptx  ancseq_workflow.tiff  ~$ancseq_workflow.pptx
test/: test.sh  test_aa.fasta  test_nt.fasta
